Revert "LPD-58378 Fix unit test"
This reverts commit e9bbbf20fa073c8ad1b940c68affdf7892bb0c8b.